--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,13 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
+    "twilio": "^5.9.0",
     "validator": "^13.15.15"
   }
 }
