--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,28 +9,30 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
-    "axios": "^1.11.0",
-    "framer-motion": "^12.23.12",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2",
-    "react-toastify": "^11.0.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.x",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "postcss": "^8.x",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.1.2"
-  }
+"dependencies": {
+  "@tailwindcss/vite": "^4.1.13",
+  "axios": "^1.11.0",
+  "framer-motion": "^12.23.12",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-icons": "^5.5.0",
+  "react-router-dom": "^7.8.2",
+  "react-toastify": "^11.0.5",
+  "react-leaflet": "^4.2.1",
+  "leaflet": "^1.9.4"
+},
+"devDependencies": {
+  "@eslint/js": "^9.33.0",
+  "@types/react": "^18.2.7",
+  "@types/react-dom": "^18.2.4",
+  "@vitejs/plugin-react": "^5.0.0",
+  "autoprefixer": "^10.x",
+  "eslint": "^9.33.0",
+  "eslint-plugin-react-hooks": "^5.2.0",
+  "eslint-plugin-react-refresh": "^0.4.20",
+  "globals": "^16.3.0",
+  "postcss": "^8.x",
+  "tailwindcss": "^3.4.17",
+  "vite": "^7.1.2"
+}
 }
